messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-ingress
spec:
  rules:
  - host: messaging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 80
